--- a/views/home.pug
+++ b/views/home.pug
@@ -1,11 +1,5 @@
-doctype html
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(http-equiv="X-UA-Compatible", content="IE=edge")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Document
-    body 
-
-    h1 Pagina home
-    h2=nome
+extends ./main
+block content
+    
+    h1=nome
+    
