--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,6 +121,9 @@ hr {
 
 .main-nav{
   margin-bottom: 20px !important;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .main-container{
   min-width: 600px;
@@ -128,6 +131,7 @@ hr {
   background-color: rgb(230, 227, 227);
   padding:20px;
   border-radius: 5px;
+  box-shadow: rgb(0 0 0 / 50%) 0px 5px 15px;
 }
 .main-container form input{
   margin-bottom: 25px !important;
